; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/peripherals/sigmadelta/main/extr_sigmadelta_example_main.c_sigmadelta_example_init.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/peripherals/sigmadelta/main/extr_sigmadelta_example_main.c_sigmadelta_example_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@GPIO_NUM_4 = common dso_local global i32 0, align 4
@SIGMADELTA_CHANNEL_0 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @sigmadelta_example_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sigmadelta_example_init() #0 {
  %1 = alloca %struct.TYPE_3__, align 4
  %2 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i32 80, i32* %2, align 4
  %3 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  %4 = load i32, i32* @GPIO_NUM_4, align 4
  store i32 %4, i32* %3, align 4
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 0, i32* %5, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  %7 = load i32, i32* @SIGMADELTA_CHANNEL_0, align 4
  store i32 %7, i32* %6, align 4
  %8 = call i32 @sigmadelta_config(%struct.TYPE_3__* %1)
  ret void
}

declare dso_local i32 @sigmadelta_config(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
